--- a/myproject/main/static/main/css/main.css
+++ b/myproject/main/static/main/css/main.css
@@ -3,21 +3,35 @@ body {
     background: linear-gradient(132deg, rgba(0,0,0,1) 47%, rgba(34,0,47,1) 70%, rgba(42,0,59,1) 77%, rgba(54,0,78,1) 83%, rgba(58,0,84,1) 87%, rgba(64,0,94,1) 91%, rgba(68,0,101,1) 94%, rgba(70,0,106,1) 97%, rgba(79,0,119,1) 100%);
     background-size: 150% 150%;
     animation: gradient 10s ease infinite;
+    height: 100%;
+    width: 100%;
+    min-height: 100%;
+    position: relative;
+    min-height:100vh
+}
+#container{
+    min-height: 100%;
+    padding-bottom: 120px;
 }
 
-
-
 aside{
-background: linear-gradient(132deg, rgba(0,0,0,1) 47%, rgba(34,0,47,1) 70%, rgba(42,0,59,1) 77%, rgba(54,0,78,1) 83%, rgba(58,0,84,1) 87%, rgba(64,0,94,1) 91%, rgba(68,0,101,1) 94%, rgba(70,0,106,1) 97%, rgba(79,0,119,1) 100%);
+    background: linear-gradient(132deg, rgba(0,0,0,1) 47%, rgba(34,0,47,1) 70%, rgba(42,0,59,1) 77%, rgba(54,0,78,1) 83%, rgba(58,0,84,1) 87%, rgba(64,0,94,1) 91%, rgba(68,0,101,1) 94%, rgba(70,0,106,1) 97%, rgba(79,0,119,1) 100%);
     background-size: 250% 250%;
     animation: gradient 8s ease infinite;
     float: left;
-
-    width: 22%;
+    text-align: center;
+    position: fixed;
+    width: 320px;
+    left: -320px;
+    min-width: 320px;
     padding: 2.5%;
-    height: 100vh;
+    height: 100%;
     color: #875B8E;
+    -webkit-transition: left 0.3s;
+    -moz-transition: left 0.3s;
+    transition: left 0.3s;
     border-right: 2px solid #5C3566;
+    z-index: 2000;
 }
 @keyframes gradient {
     0% {
@@ -33,9 +47,8 @@ background: linear-gradient(132deg, rgba(0,0,0,1) 47%, rgba(34,0,47,1) 70%, rgba
 aside img{
     height: 150px;
     border-radius: 50%;
-    margin: 70px 0 50px 0 ;
+    margin: 70px auto 50px auto;
     animation: zoom 10s ease infinite;
-    cursor: pointer;
 }
 
 aside img:hover{
@@ -97,7 +110,7 @@ aside ul li {
     font-size: 19px;
     display: block;
     margin-top: 15px;
-    transition: transform .4s ease;
+    transition: transform .3s ease;
 
 }
 
@@ -112,12 +125,55 @@ aside ul li:hover, aside ul a:hover{
     transform: scale(1.06);
 }
 
+
+
+.nav-toggle {
+    position: absolute;
+    left: 320px;
+    top: 5em;
+    padding: 0.5em 0.5em 0.7em 0.5em;
+    background: #623868;
+    color: #875B8E;
+    cursor: pointer;
+    font-size: 1.2em;
+    line-height: 1;
+    z-index: 2001;
+    transition: color 0.4s ease;
+
+}
+
+.nav-toggle:after {
+
+    text-decoration: none;
+}
+
+.nav-toggle:hover {
+    color: #f4f4f4;
+    animation: change 4s ease infinite;
+    box-shadow:
+    0 0 11px #623868,
+    0 0 20px #623868,
+    0 0 30px #875B8E;
+}
+
+
+@keyframes change {
+  0% {content: '\2630';}
+  50% {content: '\2715';}
+  100% {content: '\2630';}
+}
+
+
+
+main{
+    width: 100%;
+    height: 100%;
+    padding: 120px;
+}
+
 main .features {
-    float: left;
     color: #fff;
-    margin-top: 100px;
     text-align: center;
-    width: 75%;
 }
 
 main .features h1{
@@ -129,7 +185,7 @@ main .features p{
     margin: 20px auto;
 }
 
-#nav{
+#nav_panel{
     margin: auto;
 }
 
@@ -142,11 +198,48 @@ main .features p{
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    display: none;
-    cursor: pointer;
+    z-index: 2002;
 }
 
 form{
     width: 40%;
     margin: 25px auto;
+}
+
+
+
+
+footer {
+    height: 120px;
+    width: 100%;
+    background: #000;
+    position: absolute;
+    padding: 1% 15%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: space-around;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    left: 0;
+    bottom: 0;
+    box-shadow:
+    0 0 5px #623868,
+    0 0 15px #623868,
+    0 0 20px #875b8e,
+    0 0 40px #a185a5,
+    0 0 50px #af92b3;
+}
+
+footer a{
+    text-decoration: none;
+    color: #875B8E;
+    transition: transform .3s ease;
+}
+
+footer a:hover{
+    color: #A185A5;
+    text-decoration: none;
+    transform: scale(1.06);
 }
