--- a/myproject/main/templates/main/layout.html
+++ b/myproject/main/templates/main/layout.html
@@ -7,39 +7,52 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'main/css/tailwind.css' %}">
+
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-<aside>
-    <table id="nav">
-        <tr>
-            <td><img src="{% static 'main/img/ava.png' %}" class="ava" alt="logo_icon">
+<header>
 
-            </td>
-        </tr>
-        <tr>
-            <td><div id="logo_div"><span class="logo">MySite</span></div></td>
-        </tr>
-        <tr>
-            <td>
-                <ul>
-                    <li><a href="{% url 'main' %}">Main </a></li>
-                    <li><a href="{% url 'about' %}">About</a></li>
-                    <li><a href="{% url 'news_home' %}">News</a></li>
-                    <li><a href="{% url 'contacts' %}">Contacts </a></li>
-                    <li><a href="{% url 'create' %}"><button class="btn btn-info">Add post</button> </a></li>
-                </ul>
-            </td>
-        </tr>
-    </table>
+</header>
+<div id="container">
+
+    <input type="checkbox" id="nav-toggle" hidden>
+    <aside id="nav_panel">
+        <label for="nav-toggle" class="nav-toggle" onclick>≡</label>
+        <img src="{% static 'main/img/ava.png' %}" class="ava cursor-zoom-in" alt="logo_icon">
+        <div id="logo_div"><span class="logo">MySite</span></div>
+        <ul>
+            <li><a href="{% url 'main' %}">Main </a></li>
+            <li><a href="{% url 'about' %}">About</a></li>
+            <li><a href="{% url 'news_home' %}">News</a></li>
+            <li><a href="{% url 'contacts' %}">Contacts </a></li>
+            <li><a href="{% url 'create' %}">
+                <button class="p-2 outline outline-1 outline-offset-4 outline-[#AF92B3]/50 rounded-md">Add post</button>
+            </a>
+            </li>
+        </ul>
+    </aside>
+    <div class="mask-content"></div>
+    <main>
+
+        {% block content %}{% endblock %}
+
+    </main>
+
+</div>
+<footer>
+
+        <a href="">1111111111</a>
+        <a href="">222222222</a>
+        <a href="">3333333333</a>
+        <a href="">44444444444444</a>
+        <a href="">55555</a>
+        <a href="">6666666 66666</a>
+        <a href="">7 7777 777777777</a>
 
 
-</aside>
-<main>
-    {% block content %}{% endblock %}
-
-</main>
+</footer>
 <script src="{% static 'main/js/main.js' %}"></script>
 </body>
 </html>
