--- a/myproject/news/templates/news/news_home.html
+++ b/myproject/news/templates/news/news_home.html
@@ -5,16 +5,21 @@
 {% block content %}
 <div class="features">
     <h1>News in site</h1>
+    <hr>
     {% if news %}
     {% for el in news %}
-        <div >
+        <div class="article">
             <h3>{{ el.title }}</h3>
             <p>{{ el.anons }}</p>
+            <p>{{ el.full_text }}</p>
+            <hr>
         </div>
     {% endfor %}
     {% else %}
     <p>У вас нет записей</p>
     {% endif %}
+
+
     {#Comment#}
 </div>
 
