--- a/myproject/news/templates/news/create.html
+++ b/myproject/news/templates/news/create.html
@@ -5,6 +5,7 @@
 {% block content %}
 <div class="features">
     <h1>Add article</h1>
+    <h1>Add article</h1>
     <form method="post">
         {% csrf_token %}<br>
 
