--- a/myproject/main/templates/main/layout.html
+++ b/myproject/main/templates/main/layout.html
@@ -7,21 +7,28 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
-    <link rel="stylesheet" href="{% static 'main/css/tailwind.css' %}">
+    <script src="https://cdn.tailwindcss.com"></script>
 
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
+
+<div id="container">
 <header>
+    <div class="logo_div"><span class="logo">MySite</span></div>
+    <div id="nav_links">
+        <a href="{% url 'main' %}">Main </a>
+        <a href="{% url 'about' %}">About</a>
+        <a href="{% url 'news_home' %}">News</a>
+        <a href="{% url 'contacts' %}">Contacts </a>
+    </div>
 
 </header>
-<div id="container">
-
     <input type="checkbox" id="nav-toggle" hidden>
     <aside id="nav_panel">
         <label for="nav-toggle" class="nav-toggle" onclick>≡</label>
         <img src="{% static 'main/img/ava.png' %}" class="ava cursor-zoom-in" alt="logo_icon">
-        <div id="logo_div"><span class="logo">MySite</span></div>
+        <div class="logo_div"><span class="logo">MySite</span></div>
         <ul>
             <li><a href="{% url 'main' %}">Main </a></li>
             <li><a href="{% url 'about' %}">About</a></li>
@@ -33,17 +40,16 @@
             </li>
         </ul>
     </aside>
-    <div class="mask-content"></div>
+
     <main>
 
         {% block content %}{% endblock %}
 
     </main>
-
-</div>
-<footer>
+    <footer>
 
         <a href="">1111111111</a>
+        <a href="">222222222</a>
         <a href="">222222222</a>
         <a href="">3333333333</a>
         <a href="">44444444444444</a>
@@ -51,8 +57,11 @@
         <a href="">6666666 66666</a>
         <a href="">7 7777 777777777</a>
 
-
-</footer>
+    </footer>
+</div>
+<!--<script src="{% static 'main/js/three.min.js' %}"></script>-->
+<!--<script src="{% static 'main/js/vanta.cells.min.js' %}"></script>-->
+<!--<script src="{% static 'main/js/animation.js' %}"></script>-->
 <script src="{% static 'main/js/main.js' %}"></script>
 </body>
 </html>
