--- a/myproject/main/templates/main/layout.html
+++ b/myproject/main/templates/main/layout.html
@@ -25,8 +25,9 @@
 
 </header>
     <input type="checkbox" id="nav-toggle" hidden>
-    <aside id="nav_panel">
-        <label for="nav-toggle" class="nav-toggle" onclick>≡</label>
+    <!--<label >≡</label>-->
+    <aside id="nav_panel" for="nav-toggle" onclick>
+
         <img src="{% static 'main/img/ava.png' %}" class="ava cursor-zoom-in" alt="logo_icon">
         <div class="logo_div"><span class="logo">MySite</span></div>
         <ul>
