--- a/myproject/main/static/main/css/main.css
+++ b/myproject/main/static/main/css/main.css
@@ -10,6 +10,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    padding-left: 30px;
 }
 
 header{
@@ -29,19 +30,21 @@ aside{
     background: linear-gradient(132deg, rgba(0,0,0,1) 47%, rgba(34,0,47,1) 70%, rgba(42,0,59,1) 77%, rgba(54,0,78,1) 83%, rgba(58,0,84,1) 87%, rgba(64,0,94,1) 91%, rgba(68,0,101,1) 94%, rgba(70,0,106,1) 97%, rgba(79,0,119,1) 100%);
     background-size: 250% 250%;
     animation: gradient 8s ease infinite;
+
+  clip-path: polygon(0 0, 100% 0, 77% 28%, 98% 48%, 84% 72%, 94% 83%, 87% 100%, 0 100%);
     float: left;
     text-align: center;
     position: fixed;
-    width: 320px;
-    left: -320px;
+    width: 400px;
+    left: -300px;
     min-width: 320px;
-    padding: 2.5%;
+    padding: 20px 90px 20px 10px;
     height: 100%;
     color: #875B8E;
     -webkit-transition: left 0.3s;
     -moz-transition: left 0.3s;
-    transition: left 0.3s;
-    border-right: 2px solid #5C3566;
+    transition: left 0.5s;
+    /*border-right: 2px solid #5C3566;*/
     z-index: 2000;
 }
 @keyframes gradient {
@@ -138,7 +141,7 @@ aside ul li:hover, aside ul a:hover{
 
 
 
-.nav-toggle {
+/*.nav-toggle {
     position: absolute;
     left: 320px;
     top: 5em;
@@ -151,13 +154,14 @@ aside ul li:hover, aside ul a:hover{
     z-index: 2001;
     transition: color 0.4s ease;
 
-}
+}*/
 
-.nav-toggle:after {
+/*.nav-toggle:after {
 
     text-decoration: none;
-}
+}*/
 
+/*
 .nav-toggle:hover {
     color: #f4f4f4;
     box-shadow:
@@ -165,6 +169,7 @@ aside ul li:hover, aside ul a:hover{
     0 0 20px #623868,
     0 0 30px #875B8E;
 }
+*/
 
 
 
