--- a/myproject/main/static/main/css/main.css
+++ b/myproject/main/static/main/css/main.css
@@ -25,11 +25,15 @@ header{
     padding: 0 20px;
 }
 
+.nav-link{
+    padding: 5px;
+}
+
 aside{
-    /*background: linear-gradient(132deg, rgba(0,0,0,1) 47%, rgba(34,0,47,1) 70%, rgba(42,0,59,1) 77%, rgba(54,0,78,1) 83%, rgba(58,0,84,1) 87%, rgba(64,0,94,1) 91%, rgba(68,0,101,1) 94%, rgba(70,0,106,1) 97%, rgba(79,0,119,1) 100%);
-    background-size: 250% 250%;*/
+    background: linear-gradient(132deg, rgba(0,0,0,1) 47%, rgba(34,0,47,1) 70%, rgba(42,0,59,1) 77%, rgba(54,0,78,1) 83%, rgba(58,0,84,1) 87%, rgba(64,0,94,1) 91%, rgba(68,0,101,1) 94%, rgba(70,0,106,1) 97%, rgba(79,0,119,1) 100%);
+    background-size: 250% 250%;
     animation: gradient 8s ease infinite;
-    background-color: white;
+/*    background-color: white;*/
     text-align: center;
     position: fixed;
     width: 50%;
@@ -45,7 +49,7 @@ aside{
     height: 100%;
     -webkit-transition: left 0.3s;
     -moz-transition: left 0.3s;
-    transition: left 0.5s;
+    transition: left 1s;
 }
 
 #nav_panel_r{
@@ -56,7 +60,7 @@ aside{
     height: 100%;
     -webkit-transition: right 0.3s;
     -moz-transition: right 0.3s;
-    transition: right 0.5s;
+    transition: right 1s;
 }
 
 @keyframes gradient {
@@ -234,4 +238,24 @@ footer a:hover{
     color: #A185A5;
     text-decoration: none;
     transform: scale(1.06);
+}
+
+#preloader{
+    position: fixed;
+    vertical-align: middle;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgb(70 0 106 / 73%);
+    text-align: center;
+    z-index: 1999;
+    opacity: 0; /* Начальная прозрачность */
+    transition: opacity 1s ease-in-out; /* Плавное изменение прозрачности */
+}
+
+#preloader h3{
+    margin-top: 50vh;
+    font-size: 50px;
+
 }
