--- a/myproject/main/templates/main/layout.html
+++ b/myproject/main/templates/main/layout.html
@@ -1,5 +1,5 @@
-{% load static %}
 <!doctype html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,16 +14,19 @@
 <body>
 <input type="checkbox" id="nav_toggle_l" hidden>
 <input type="checkbox" id="nav_toggle_r" hidden>
+<div id="preloader" style="display: none;">
+    <h3>Loading...</h3>
+</div>
 <!--<label >≡</label>-->
 <aside id="nav_panel_l" for="nav_toggle_l" onclick>
     <img src="{% static 'main/img/ava.png' %}" class="ava cursor-zoom-in" alt="logo_icon">
     <div class="logo_div"><span class="logo">MySite</span></div>
     <ul>
-        <li><a href="{% url 'main' %}">Main </a></li>
-        <li><a href="{% url 'about' %}">About</a></li>
-        <li><a href="{% url 'news_home' %}">News</a></li>
-        <li><a href="{% url 'contacts' %}">Contacts </a></li>
-        <li><a href="{% url 'create' %}">
+        <li><a href="{% url 'main' %}" class="nav-link">Main </a></li>
+        <li><a href="{% url 'about' %}" class="nav-link">About</a></li>
+        <li><a href="{% url 'news_home' %}" class="nav-link">News</a></li>
+        <li><a href="{% url 'contacts' %}" class="nav-link">Contacts </a></li>
+        <li><a href="{% url 'create' %}" class="nav-link">
             <button class="p-2 outline outline-1 outline-offset-4 outline-[#AF92B3]/50 rounded-md">Add post</button>
         </a>
         </li>
@@ -35,11 +38,11 @@
     <img src="{% static 'main/img/ava.png' %}" class="ava cursor-zoom-in" alt="logo_icon">
     <div class="logo_div"><span class="logo">MySite</span></div>
     <ul>
-        <li><a href="{% url 'main' %}" class="nav_link">Main </a></li>
-        <li><a href="{% url 'about' %}" class="nav_link">About</a></li>
-        <li><a href="{% url 'news_home' %}" class="nav_link">News</a></li>
-        <li><a href="{% url 'contacts' %}" class="nav_link">Contacts </a></li>
-        <li><a href="{% url 'create' %}" class="nav_link">
+        <li><a href="{% url 'main' %}" class="nav-link">Main </a></li>
+        <li><a href="{% url 'about' %}" class="nav-link">About</a></li>
+        <li><a href="{% url 'news_home' %}" class="nav-link">News</a></li>
+        <li><a href="{% url 'contacts' %}" class="nav-link">Contacts </a></li>
+        <li><a href="{% url 'create' %}" class="nav-link">
             <button class="p-2 outline outline-1 outline-offset-4 outline-[#AF92B3]/50 rounded-md">Add post</button>
         </a>
         </li>
@@ -49,30 +52,23 @@
     <header>
         <div class="logo_div"><span class="logo">MySite</span></div>
         <div id="nav_links">
-            <a href="{% url 'main' %}" class="nav_link">Main </a>
-            <a href="{% url 'about' %}" class="nav_link">About</a>
-            <a href="{% url 'news_home' %}" class="nav_link">News</a>
-            <a href="{% url 'contacts' %}" class="nav_link">Contacts </a>
+            <a href="{% url 'main' %}" class="nav-link">Main </a>
+            <a href="{% url 'about' %}" class="nav-link">About</a>
+            <a href="{% url 'news_home' %}" class="nav-link">News</a>
+            <a href="{% url 'contacts' %}" class="nav-link">Contacts </a>
         </div>
 
     </header>
 
-
     <main>
-
         {% block content %}{% endblock %}
-
     </main>
     <footer>
 
-        <a href="">1111111111</a>
-        <a href="">222222222</a>
-        <a href="">222222222</a>
-        <a href="">3333333333</a>
-        <a href="">44444444444444</a>
-        <a href="">55555</a>
-        <a href="">6666666 66666</a>
-        <a href="">7 7777 777777777</a>
+        <a href="{% url 'main' %}" class="nav-link">Main </a>
+        <a href="{% url 'about' %}" class="nav-link">About</a>
+        <a href="{% url 'news_home' %}" class="nav-link">News</a>
+        <a href="{% url 'contacts' %}" class="nav-link">Contacts </a>
 
     </footer>
 </div>
@@ -80,5 +76,8 @@
 <!--<script src="{% static 'main/js/vanta.cells.min.js' %}"></script>-->
 <!--<script src="{% static 'main/js/animation.js' %}"></script>-->
 <script src="{% static 'main/js/main.js' %}"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="{% static 'main/js/navigation.js' %}"></script>
+
 </body>
 </html>
