--- a/myproject/main/templates/main/contacts.html
+++ b/myproject/main/templates/main/contacts.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="features">
-    <h1>About</h1>
+    <h1>Contacts</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam aspernatur, dolorum facere incidunt libero
         molestias porro quisquam repellendus sunt vero.</p>
     <button class="btn btn-warning">Button about</button>
