--- a/myproject/main/templates/main/layout.html
+++ b/myproject/main/templates/main/layout.html
@@ -25,7 +25,8 @@
         <li><a href="{% url 'main' %}" class="nav-link">Main </a></li>
         <li><a href="{% url 'about' %}" class="nav-link">About</a></li>
         <li><a href="{% url 'news_home' %}" class="nav-link">News</a></li>
-        <li><a href="{% url 'contacts' %}" class="nav-link">Contacts </a></li>
+        <li><a href="{% url 'contacts' %}" class="nav-link">Contacts</a></li>
+        <li><a href="{% url 'weather' %}" class="nav-link">Weather</a></li>
         <li><a href="{% url 'create' %}" class="nav-link">
             <button class="p-2 outline outline-1 outline-offset-4 outline-[#AF92B3]/50 rounded-md">Add post</button>
         </a>
@@ -35,14 +36,16 @@
 
 <div id="container">
     <header>
-        <div class="logo-div"><a href="{% url 'main' %}" class="logo nav-link">MySite</a></div>
-        <div id="nav-links">
-            <a href="{% url 'main' %}" class="nav-link">Main </a>
-            <a href="{% url 'about' %}" class="nav-link">About</a>
-            <a href="{% url 'news_home' %}" class="nav-link">News</a>
-            <a href="{% url 'contacts' %}" class="nav-link">Contacts </a>
-        </div>
-
+        <nav>
+            <div class="logo-div"><a href="{% url 'main' %}" class="logo nav-link">MySite</a></div>
+            <div id="nav-links">
+                <a href="{% url 'main' %}" class="nav-link">Main </a>
+                <a href="{% url 'about' %}" class="nav-link">About</a>
+                <a href="{% url 'news_home' %}" class="nav-link">News</a>
+                <a href="{% url 'contacts' %}" class="nav-link">Contacts </a>
+                <a href="{% url 'weather' %}" class="nav-link">Weather</a>
+            </div>
+        </nav>        
     </header>
 
     <main>
